@@ -7,12 +7,12 @@
 
 <!--
 <div id="openIDSelect" style="font-size:70%;padding-top:4px;float:right;display:none;">
-<a href="#" onclick="javascript:return openID();"><img border="0" src="CHILLIWWW/www/openid.gif"></a>
+<a href="#" onclick="javascript:return openID();"><img border="0" src="CHILLIWWW/www/openid.gif"/></a>
 </div>
 
 <div id="openIDForm"
 style="display:none;background-color:white;position:absolute;padding:10px;border:solid 1px orange">
-OpenID URL: <input style="font-size:60%;" name="username" type="text" id="username" size="30" value="http://">
+OpenID URL: <input style="font-size:60%;" name="username" type="text" id="username" size="30" value="http://"/>
 </div>
 -->
 
@@ -25,20 +25,21 @@ OpenID URL: <input style="font-size:60%;" name="username" type="text" id="userna
 
 <tr id="usernameRow">
 <td id="usernameLabel"><b>Username</b></td>
-<td><input name="username" type="text" id="username" size="10"></td>
+<td><input name="username" type="text" id="username" size="10"/></td>
 </tr>
 <tr id="passwordRow">
-<td id="passwordLabel"><b>Password<b></td>
-<td><input name="password" type="password" id="password" size="10"></td>
+<td id="passwordLabel"><b>Password</b></td>
+<td><input name="password" type="password" id="password" size="10"/></td>
 </tr>
 <tr>
 
-<td colspan="2"><input type="submit" value="Connect" onClick="connect();"></td>
+<td colspan="2"><input type="submit" value="Connect" onClick="connect();"/></td>
 
 </tr>	
 <tr id="signUpRow">
-<td id="signUp" colspan="2 style="font-size: 50%">
+<td id="signUp" colspan="2" style="font-size: 50%">
 <a target="_blank" href="https://coova.org/app/c/signup.html">Sign up</a> for an account
+</td>
 </tr>
 </table>		
 </form>
@@ -90,7 +91,7 @@ OpenID URL: <input style="font-size:60%;" name="username" type="text" id="userna
 </div>
 
 <div id="waitPage" style="">
-<img src="CHILLIWWW/www/wait.gif"> Please wait...
+<img src="CHILLIWWW/www/wait.gif"/> Please wait...
 </div>
 
 <div id="errorPage" style="display:none;">
